--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Thagubothu Samba</p>
-    <p>New Feature bolthe</p>
+    <p>New Feature bolthe (Button)</p>
 </body>
 </html>
